--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@deck.gl/layers": "^8.9.35",
     "@deck.gl/react": "^8.9.35",
     "@tanstack/react-query": "^5.17.0",
+    "@types/leaflet": "^1.9.21",
     "cesium": "^1.114.0",
     "d3-scale": "^4.0.2",
     "d3-scale-chromatic": "^3.0.0",
+    "leaflet": "^1.9.4",
     "proj4": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "recharts": "^2.10.4",
     "resium": "^1.17.2",
     "zustand": "^4.5.0"
